--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,10 +1,8 @@
-$color-1: rgb(150, 68, 68);
-$color-2: #000000a6;
-$color-3: #79C27B;
-$color-4: #f0f0f0fd;
-$color-5: #c5c5c5;
-$color-6: #646464;
-$color-7: #000000;
+$principal-1: #fff;
+$principal-2: #FBB023;
+$secundario-1: #343434;
+$secundario-2: #000000;
+$tercero-1: #c5c5c583;
 
 $mostasa: #e7a61a;
 $mostasa-2: #e7a61ac2;
