--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,14 +1,10 @@
 .footer{
-    height: 100%;
-    width: 100%;
-    max-height: 60px;
-    background-color: $color-7;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    background-color: $secundario-1;
     &__text{
         padding-top: 3vh;
-        padding-bottom: 3vh;
-        color: $color-1;
+        padding-bottom: 4vh;
+    }
+    &__img{
+        width: 15%;
     }
 }
