--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -25,9 +25,8 @@
     &__iconos{
         padding-top: 4vh;
         padding-bottom: 4vh;
-        justify-content: center;
-        width: 5%;
         min-width: 24px;
+        max-width: 32px;
         
     }
 }
