--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,7 +1,7 @@
 .nav{
-
+    background-color: transparent !important;
     &__list{
-        margin-right: 15vw;
+        margin-right: 5vw;
     }
     &__item{
         margin-right: 2vw;
